# ffmpeg-notes

./: LICENSE  README.md
abc/: av.md  codec.md  container.md  player.md  rtmp_hls.md  sound.md
abc/format/: README.md  flv.md  m3u8.md  mp4.md
blogs/: vidoe_filters.md
cli/: args.md  ffmpeg.md  ffplay.md  ffprobe.md  opengl.md  rtmp.md
cli/codec/: aac.md  h264.md  mp3.md
cli/filter/: README.md  audio.md  fade.md  overlay.md  subtitle.md  video.md  watermark.md
cli/format/: m3u8.md  segment.md
compile/: Dockerfile.develop  Dockerfile.opengl  install.md  ubuntu.md  windows.md
docs/: ffmpeg-doc-01-overview.md  ffmpeg-doc-02-options.md  ffmpeg-doc-03-capture.md  ffmpeg-doc-04-escape.md  ffmpeg-doc-05-eval.md  ffmpeg-doc-06-codec.md  ffmpeg-doc-07-bsfs.md  ffmpeg-doc-08-format.md  ffmpeg-doc-09-muxer.md  ffmpeg-doc-10-metadata.md  ffmpeg-doc-11-protocol.md  ffmpeg-doc-12-device.md  ffmpeg-doc-13-resample.md  ffmpeg-doc-14-rescale.md  ffmpeg-doc-15-avfilter.md  ffmpeg-doc-16-afilter.md  ffmpeg-doc-17-vfilter.md  ffmpeg-doc-18-mfilter.md
libs/doc/: avformat.md  output.md
libs/envs/: windows.md
libs/examples/muxing/: CMakeLists.txt
libs/examples/quickstart/: CMakeLists.txt  main.c
libs/examples/tutorial/: CMakeLists.txt  main.c
